devblog/devblog-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: devblog
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: devblog
