devblog/devblog-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: devblog-ingressroute
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`blog.dysnomia.studio`)
    kind: Rule
    services:
    - name: devblog
      port: 80
    middlewares:
      - name: security
  tls:
    secretName: devblog-tls-secret
